Align to view rotation glitch #38217

Closed
opened 2014-01-14 20:37:50 +01:00 by Lewis Veasey · 18 comments

System Information
Windows 7 home premium 64bit,

Blender Version
Broken: (2.69.8, Hash: e998465) (Older versions as well)

Short description of error

Moving objects through X,Y,Z (in side bar) make models face down. While (Align to view) is in use.

Exact steps for others to reproduce the error

Add "Monkey" then click "Align To View" Check box. Then adjust the location ether X,Y,Z in the side bar. The model will then face downward, for some reason. Unchecking and rechecking the box will fix it but to the current view of course, which could of changed at any point.

**System Information** Windows 7 home premium 64bit, **Blender Version** Broken: (2.69.8, Hash: e998465) (Older versions as well) **Short description of error** Moving objects through X,Y,Z (in side bar) make models face down. While (Align to view) is in use. **Exact steps for others to reproduce the error** Add "Monkey" then click "Align To View" Check box. Then adjust the location ether X,Y,Z in the side bar. The model will then face downward, for some reason. Unchecking and rechecking the box will fix it but to the current view of course, which could of changed at any point.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @LewisVeasey

Added subscriber: @LewisVeasey

Added subscriber: @sreich

Added subscriber: @sreich

"Align To View" is being disabled when roration (and for some reason any of the other properties) is changed.
Seems to me this is not actually needed, so we could just do this: axis_align_fix.diff
Would be good to grey out the rotation property when "Align To View" is enabled then.

"Align To View" is being disabled when roration (and for some reason any of the other properties) is changed. Seems to me this is not actually needed, so we could just do this: [axis_align_fix.diff](https://archive.blender.org/developer/F68401/axis_align_fix.diff) Would be good to grey out the rotation property when "Align To View" is enabled then.
Author

Thank you! Do you think you could change the check box to a button instead? It almost seems to be pointless to be a check box. On second thought, you could have it so the model follows the view in real time till you apply the model settings. As a Pose to checking the box and unchecking to update the model's rotation to view. If you could do one or the other, that would be greatly appreciated, it's just a thought, so don't feel obligated to do it.

Thank you! Do you think you could change the check box to a button instead? It almost seems to be pointless to be a check box. On second thought, you could have it so the model follows the view in real time till you apply the model settings. As a Pose to checking the box and unchecking to update the model's rotation to view. If you could do one or the other, that would be greatly appreciated, it's just a thought, so don't feel obligated to do it.
Campbell Barton self-assigned this 2014-01-15 07:10:16 +01:00

@sreich - not sure this is right - rotation is supposed to override view alignment, also - any changes here should be matches in pythons add object utility function, will check on this,

@sreich - not sure this is right - rotation is supposed to override view alignment, also - any changes here should be matches in pythons add object utility function, will check on this,
Campbell Barton changed title from >Align to view rotation glitch< to Align to view rotation glitch 2014-01-15 07:10:43 +01:00

If rotation is supposed to override view alignment, then having it as a checkbox is weird.
That means that you have to uncheck and check "Align To View" again to reactivate it after changing rotation.

If rotation is supposed to override view alignment, then having it as a checkbox is weird. That means that you have to uncheck and check "Align To View" again to reactivate it after changing rotation.
Author

That's exactly what I was thinking. I think a button would make more sense then a check box.

That's exactly what I was thinking. I think a button would make more sense then a check box.

The reason its not a button (an operator which overwrites the current rotation values) is that this can be enabled by default in the preferences, so that would mean you couldnt run the opeator with this option enabled by default.

It could be made to work if the user preference would initialize rotation values when the preference was enabled.
but it does complicate things a little, since this means every operator would need its own draw function which adds in an operator button to perform this action.
... or we could have some automatic detection of this case so the template draw functioni knows to add a an operator button for the rotation values.

But this is a bit odd, another strange behavior is you can orbit the view, then re-enable align view to get a new rotation.

The reason its not a button (an operator which overwrites the current rotation values) is that this can be enabled by default in the preferences, so that would mean you couldnt run the opeator with this option enabled by default. It could be made to work if the user preference would initialize rotation values when the preference was enabled. but it does complicate things a little, since this means every operator would need its own draw function which adds in an operator button to perform this action. ... or we could have some automatic detection of this case so the template draw functioni knows to add a an operator button for the rotation values. But this is a bit odd, another strange behavior is you can orbit the view, then re-enable align view to get a new rotation.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

There is some logical conflict here, but the initial report states that:

"The model will then face downward, for some reason"

Which is in fact quite logical since you're editing the rotation values which have been set already by the viewport.

We could make some improvements here (wrt rotating the view then changing align option and making it more clear which is set...)

But this is more of a TODO then a bug.

There is some logical conflict here, but the initial report states that: *"The model will then face downward, for some reason"* Which is in fact quite logical since you're editing the rotation values which have been set already by the viewport. We could make some improvements here (wrt rotating the view then changing align option and making it more clear which is set...) But this is more of a TODO then a bug.

There is still a bug here though.
As the report mentiones, not only rotation, but location (and in fact every other property change) will disable view alignment.

There is still a bug here though. As the report mentiones, not only rotation, but location (and in fact every other property change) will disable view alignment.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Ok, I see the bug now happens with Suzzane but not a Cube. checkign on it...

Ok, I see the bug now happens with Suzzane but not a Cube. checkign on it...

This issue was referenced by blender/blender-addons-contrib@38e683cbb1

This issue was referenced by blender/blender-addons-contrib@38e683cbb15e303cf68562b2183cc3082c346f8f

This issue was referenced by 38e683cbb1

This issue was referenced by 38e683cbb15e303cf68562b2183cc3082c346f8f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 38e683cbb1.

Closed by commit 38e683cbb1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38217
No description provided.