Fix T38217: Fix glitch adding Monkey with view align

added an option so view-align can default to a different axis.